Closed
Bug 591078
Opened 15 years ago
Closed 15 years ago
extensions/smime doesn't compile with frozen linkage
Categories
(MailNews Core :: Security: S/MIME, defect)
MailNews Core
Security: S/MIME
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 3.3a1
People
(Reporter: kairo, Assigned: iannbugzilla)
References
Details
(Keywords: regression)
Attachments
(1 file, 1 obsolete file)
|
1.40 KB,
patch
|
neil
:
review+
neil
:
superreview+
kairo
:
feedback+
|
Details | Diff | Splinter Review |
I tried compiling SeaMonkey with |--enable-libxul --enable-incomplete-external-linkage --disable-ldap --disable-tests| today to see how good we are (LDAP is known to not work yet, and I ran into a MailNews test disagreeing with this as well, so I disabled them as well).
What I ran into is the following:
/usr/bin/ccache /usr/bin/g++ -o nsMsgComposeSecure.o -c -I../../../../mozilla/dist/stl_wrappers -I../../../../mozilla/dist/system_wrappers -include /mnt/mozilla/hg/comm-central/mozilla/config/gcc_hidden.h -DMOZ_SUITE=1 -DOSTYPE=\"Linux2.6.35.1-1\" -DOSARCH=Linux -I/mnt/mozilla/hg/comm-central/mailnews/extensions/smime/src -I. -I../../../../mozilla/dist/include -I../../../../mozilla/dist/include/nsprpub `/mnt/mozilla/build/seamonkey-libxul/mozilla/dist/bin/nspr-config --prefix=/mnt/mozilla/build/seamonkey-libxul/mozilla/dist --includedir=/mnt/mozilla/build/seamonkey-libxul/mozilla/dist/include/nspr --cflags` -I/mnt/mozilla/build/seamonkey-libxul/mozilla/dist/include/nss -fPIC -fno-rtti -fno-exceptions -Wall -Wpointer-arith -Woverloaded-virtual -Wsynth -Wno-ctor-dtor-privacy -Wno-non-virtual-dtor -Wcast-align -Wno-invalid-offsetof -Wno-variadic-macros -Werror=return-type -pedantic -Wno-long-long -fno-strict-aliasing -fshort-wchar -pthread -pipe -DNDEBUG -DTRIMMED -Os -freorder-blocks -fno-reorder-functions -fomit-frame-pointer -DMOZILLA_CLIENT -include ../../../../comm-config.h -MD -MF .deps/nsMsgComposeSecure.pp /mnt/mozilla/hg/comm-central/mailnews/extensions/smime/src/nsMsgComposeSecure.cpp
In file included from ../../../../mozilla/dist/include/nsAString.h:43:0,
from ../../../../mozilla/dist/include/nsSubstring.h:40,
from ../../../../mozilla/dist/include/nsString.h:44,
from /mnt/mozilla/hg/comm-central/mailnews/extensions/smime/src/nsMsgComposeSecure.cpp:56:
../../../../mozilla/dist/include/nsStringFwd.h:49:2: error: #error Internal string headers are not available from external-linkage code.
In file included from ../../../../mozilla/dist/include/nsAString.h:64:0,
from ../../../../mozilla/dist/include/nsSubstring.h:40,
from ../../../../mozilla/dist/include/nsString.h:44,
from /mnt/mozilla/hg/comm-central/mailnews/extensions/smime/src/nsMsgComposeSecure.cpp:56:
../../../../mozilla/dist/include/nsTSubstring.h:40:2: error: #error Cannot use internal string classes without MOZILLA_INTERNAL_API defined. Use the frozen header nsStringAPI.h instead.
In file included from ../../../../mozilla/dist/include/nsAString.h:69:0,
from ../../../../mozilla/dist/include/nsSubstring.h:40,
from ../../../../mozilla/dist/include/nsString.h:44,
from /mnt/mozilla/hg/comm-central/mailnews/extensions/smime/src/nsMsgComposeSecure.cpp:56:
../../../../mozilla/dist/include/nsTSubstring.h:40:2: error: #error Cannot use internal string classes without MOZILLA_INTERNAL_API defined. Use the frozen header nsStringAPI.h instead.
| Reporter | ||
Comment 2•15 years ago
|
||
Looks good, I pass over this one with that fix, next failure in mailnews/import/build - I wonder if we should file a new bug or handle another one here...
| Reporter | ||
Comment 3•15 years ago
|
||
Actually, now I get this one:
/usr/bin/ccache /usr/bin/g++ -o nsMsgComposeSecure.o -c -I../../../../mozilla/dist/stl_wrappers -I../../../../mozilla/dist/system_wrappers -include /mnt/mozilla/hg/comm-central/mozilla/config/gcc_hidden.h -DMOZ_SUITE=1 -DOSTYPE=\"Linux2.6.35.1-1\" -DOSARCH=Linux -I/mnt/mozilla/hg/comm-central/mailnews/extensions/smime/src -I. -I../../../../mozilla/dist/include -I../../../../mozilla/dist/include/nsprpub `/mnt/mozilla/build/seamonkey-libxul/mozilla/dist/bin/nspr-config --prefix=/mnt/mozilla/build/seamonkey-libxul/mozilla/dist --includedir=/mnt/mozilla/build/seamonkey-libxul/mozilla/dist/include/nspr --cflags` -I/mnt/mozilla/build/seamonkey-libxul/mozilla/dist/include/nss -fPIC -fno-rtti -fno-exceptions -Wall -Wpointer-arith -Woverloaded-virtual -Wsynth -Wno-ctor-dtor-privacy -Wno-non-virtual-dtor -Wcast-align -Wno-invalid-offsetof -Wno-variadic-macros -Werror=return-type -pedantic -Wno-long-long -fno-strict-aliasing -fshort-wchar -pthread -pipe -DNDEBUG -DTRIMMED -Os -freorder-blocks -fno-reorder-functions -fomit-frame-pointer -DMOZILLA_CLIENT -include ../../../../comm-config.h -MD -MF .deps/nsMsgComposeSecure.pp /mnt/mozilla/hg/comm-central/mailnews/extensions/smime/src/nsMsgComposeSecure.cpp
/mnt/mozilla/hg/comm-central/mailnews/extensions/smime/src/nsMsgComposeSecure.cpp: In member function 'nsresult nsMsgComposeSecure::MimeInitEncryption(PRBool, nsIMsgSendReport*)':
/mnt/mozilla/hg/comm-central/mailnews/extensions/smime/src/nsMsgComposeSecure.cpp:553:3: error: 'nsXPIDLString' was not declared in this scope
/mnt/mozilla/hg/comm-central/mailnews/extensions/smime/src/nsMsgComposeSecure.cpp:553:17: error: expected ';' before 'mime_smime_enc_content_desc'
/mnt/mozilla/hg/comm-central/mailnews/extensions/smime/src/nsMsgComposeSecure.cpp:561:48: error: 'mime_smime_enc_content_desc' was not declared in this scope
/mnt/mozilla/hg/comm-central/mailnews/extensions/smime/src/nsMsgComposeSecure.cpp: In member function 'nsresult nsMsgComposeSecure::MimeFinishMultipartSigned(PRBool, nsIMsgSendReport*)':
/mnt/mozilla/hg/comm-central/mailnews/extensions/smime/src/nsMsgComposeSecure.cpp:663:3: error: 'nsXPIDLString' was not declared in this scope
/mnt/mozilla/hg/comm-central/mailnews/extensions/smime/src/nsMsgComposeSecure.cpp:663:17: error: expected ';' before 'mime_smime_sig_content_desc'
/mnt/mozilla/hg/comm-central/mailnews/extensions/smime/src/nsMsgComposeSecure.cpp:671:48: error: 'mime_smime_sig_content_desc' was not declared in this scope
/mnt/mozilla/hg/comm-central/mailnews/extensions/smime/src/nsMsgComposeSecure.cpp: In member function 'virtual nsresult nsMsgComposeSecure::MimeCryptoWriteBlock(const char*, PRInt32)':
/mnt/mozilla/hg/comm-central/mailnews/extensions/smime/src/nsMsgComposeSecure.cpp:1046:63: warning: comparison between signed and unsigned integer expressions
/mnt/mozilla/hg/comm-central/mailnews/extensions/smime/src/nsMsgComposeSecure.cpp: In function 'int make_multipart_signed_header_string(PRBool, char**, char**)':
/mnt/mozilla/hg/comm-central/mailnews/extensions/smime/src/nsMsgComposeSecure.cpp:1073:3: error: 'nsXPIDLString' was not declared in this scope
/mnt/mozilla/hg/comm-central/mailnews/extensions/smime/src/nsMsgComposeSecure.cpp:1073:17: error: expected ';' before 'crypto_multipart_blurb'
/mnt/mozilla/hg/comm-central/mailnews/extensions/smime/src/nsMsgComposeSecure.cpp:1084:51: error: 'crypto_multipart_blurb' was not declared in this scope
/mnt/mozilla/hg/comm-central/mailnews/extensions/smime/src/nsMsgComposeSecure.cpp:1086:55: error: 'crypto_multipart_blurb' was not declared in this scope
/mnt/mozilla/hg/comm-central/mailnews/extensions/smime/src/nsMsgComposeSecure.cpp: In function 'nsresult mime_encoder_output_fn(const char*, PRInt32, void*)':
/mnt/mozilla/hg/comm-central/mailnews/extensions/smime/src/nsMsgComposeSecure.cpp:1141:61: warning: comparison between signed and unsigned integer expressions
gmake[7]: *** [nsMsgComposeSecure.o] Error 1
gmake[7]: Leaving directory `/mnt/mozilla/build/seamonkey-libxul/mailnews/extensions/smime/src'
gmake[6]: *** [src_libs] Error 2
I really should have parallel building off for investigating this like that (and I did that now).
Change from nsXPIDLString to nsString too
Attachment #469661 -
Attachment is obsolete: true
| Reporter | ||
Comment 6•15 years ago
|
||
Comment on attachment 469863 [details] [diff] [review]
Change nsXPIDLString too [Checkin: Comment 8]
Looks good with this patch applied. For real now. :)
Attachment #469863 -
Flags: feedback+
Attachment #469863 -
Flags: superreview?(neil)
Attachment #469863 -
Flags: review?(neil)
Comment 7•15 years ago
|
||
Comment on attachment 469863 [details] [diff] [review]
Change nsXPIDLString too [Checkin: Comment 8]
>-#include "nsString.h"
Actually you can just drop this include; it was only added for nsXPIDLString.
Attachment #469863 -
Flags: superreview?(neil)
Attachment #469863 -
Flags: superreview+
Attachment #469863 -
Flags: review?(neil)
Attachment #469863 -
Flags: review+
Comment on attachment 469863 [details] [diff] [review]
Change nsXPIDLString too [Checkin: Comment 8]
http://hg.mozilla.org/comm-central/rev/f9d76929e7a4
Attachment #469863 -
Attachment description: Change nsXPIDLString too → Change nsXPIDLString too [Checkin: Comment 8]
(In reply to comment #7)
> Comment on attachment 469863 [details] [diff] [review]
> Change nsXPIDLString too [Checkin: Comment 8]
>
> >-#include "nsString.h"
> Actually you can just drop this include; it was only added for nsXPIDLString.
Removed #include nsStringGlue.h for checkin
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Updated•15 years ago
|
Flags: in-testsuite-
Target Milestone: --- → Thunderbird 3.3a1
You need to log in
before you can comment on or make changes to this bug.
Description
•