Bug 591078 - extensions/smime doesn't compile with frozen linkage r/sr=neil